archives/samples/ingress/templates/sample-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: venafi-sample-ingress
  namespace: sandbox
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - expiry-eddie.svc.cluster.local
    secretName: expiry-eddie.svc.cluster.local
  rules:
  - host: expiry-eddie.svc.cluster.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: expiry-eddie-nginx
            port: 
              number: 80
